# cpp-test

./: .codecov.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt
include/: foo.hpp
scripts/cmake/: ParseAndAddCatchTests.cmake
src/: CMakeLists.txt  foo.cpp  main.cpp
test/: CMakeLists.txt  test.cpp
